# ai-image-service

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  Dockerfile  docker-compose.yml  pyproject.toml  requirements.txt
.github/workflows/: deploy.yml
.nezha/: config.toml
configs/: .env.example  config.toml
docs/: API.md  API_KEY_UNIFICATION.md  ARCHITECTURE.md  DEPLOYMENT.md  MODULES.md  PLAN-batch-image-generation.md  PLAN-video-generation.md  ROADMAP.md  WORKFLOW.md
docs/api-references/: vectorengine-hailuo-image2video.md  vectorengine-kling-image2video.md  vectorengine-wanxiang-image2video.md
docs/sdk_docs/: SDK实现指南.md  上传附件.md  列出多行记录.md  获取资源上传信息.md  钉钉AI表格数据说明.md
src/: config.py  main.py
src/ai_gen_image/: __init__.py
src/api/: __init__.py  deps.py  router.py
src/dingtalk/: __init__.py  client.py
src/generator/: __init__.py  engine.py  video_engine.py
src/models/: __init__.py  prompt_config.py  request.py  response.py  video_request.py
src/services/: __init__.py  generation.py  video_generation.py
src/utils/: exceptions.py  logging.py  middleware.py
tests/: conftest.py  inspect_prompt_table.py  run_multi_image_real.py  run_sousuo_demo.py  run_sousuo_e2e_real.py  test_api_local.py  test_batch.py  test_dingtalk_sdk_config.py  test_upload_500.py  test_upload_integration.py  test_upload_simple.py  verify_sousuo_result.py
tests/test_api/: __init__.py  test_router.py
tests/test_dingtalk/: __init__.py  test_client.py
tests/test_generator/: test_engine.py  test_video_engine.py
tests/test_models/: test_prompt_config.py
(+4 files in other folders)
