[project]
name = "ai-gen-image"
version = "0.1.0"
description = "钉钉AI表格驱动的图片生成后端服务"
readme = "CLAUDE.md"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [
    {name = "Developer", email = "dev@example.com"}
]
keywords = ["dingtalk", "ai-image-generation", "fastapi"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "httpx>=0.28.0",
    "pydantic>=2.0",
    "pydantic-settings>=2.13",
    "loguru>=0.7.0",
    "Pillow>=10.0",
    "python-multipart>=0.0.9",
    # 钉钉 SDK
    "alibabacloud-dingtalk>=2.0.0",
    # AI 生图 SDK
    "google-genai>=0.8.0",
    "openai>=1.0.0",
    # 重试
    "tenacity>=8.2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=5.0",
    "pytest-mock>=3.14",
    "ruff>=0.5.0",
    "mypy>=1.11",
    "httpx>=0.28.0",  # TestClient 也需要
]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "B", "SIM"]

[tool.ruff.format]
quote-style = "double"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
pythonpath = ["src"]
